<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_event_details"
        android:name="ca.utoronto.cscb07project.ui.events.EventDetailsFragment"
        android:label="fragment_event_details"
        tools:layout="@layout/fragment_event_details">
        <action
            android:id="@+id/action_navigation_event_details_to_navigation_events"
            app:destination="@id/navigation_events" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.utoronto.cscb07project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="ca.utoronto.cscb07project.ui.events.EventsFragment"
        android:label="fragment_events"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_navigation_events_to_navigation_event_details"
            app:destination="@id/navigation_event_details" />
    </fragment>

    <!-- Add the missing action -->
    <fragment
        android:id="@+id/fragment_admin_home"
        android:name="ca.utoronto.cscb07project.ui.user.AdminHome"
        android:label="Admin Home">
        <action
            android:id="@+id/action_navigation_admin_home_to_navigation_events"
            app:destination="@id/navigation_events" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ca.utoronto.cscb07project.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_complaints"
        android:name="ca.utoronto.cscb07project.ui.complaints.ComplaintFragment"
        android:label="@string/menu_complaints"
        tools:layout="@layout/fragment_complaint" />

</navigation>